# practice_sfml

./: CMakeLists.txt
examples/01-window/: CMakeLists.txt
examples/01-window/src/: main.cpp
examples/02-sprite/: CMakeLists.txt
examples/02-sprite/src/: main.cpp
